--- a/client/build.settings
+++ b/client/build.settings
@@ -5,64 +5,62 @@
 
 settings =
 {
-	orientation =
-	{
-		-- Supported values for orientation:
-		-- portrait, portraitUpsideDown, landscapeLeft, landscapeRight
+orientation =
+{
+default = "portrait",
+        supported = { "portrait", }
+},
 
-		default = "portrait",
-		supported = { "portrait", },
-	},
-	
-	excludeFiles =
-	{
-		-- Include only the necessary icon files on each platform
-		iphone = { "Icon-*dpi.png", },
-		android = { "Icon.png", "Icon-Small-*.png", "Icon*@2x.png", },
-	},
+window = {
+defaultMode = "fullscreen",
+suspendWhenMinimized = true,
+minViewWidth = 960,
+minViewHeight = 640,
+titleText = {
+default = "Beasts Battle 2",
+},
+},
 
-	--
-	-- iOS Section
-	--
-	iphone =
-	{
-		plist =
-		{
-			UIStatusBarHidden = false,
-			UIPrerenderedIcon = true, -- set to false for "shine" overlay
-			--UIApplicationExitsOnSuspend = true, -- uncomment to quit app on suspend
-
-			CFBundleIconFiles =
-			{
-				"Icon.png",
-				"Icon@2x.png",
-				"Icon-167.png",
-				"Icon-60.png",
-				"Icon-60@2x.png",
-				"Icon-60@3x.png",
-				"Icon-72.png",
-				"Icon-72@2x.png",
-				"Icon-76.png",
-				"Icon-76@2x.png",
-				"Icon-Small.png",
-				"Icon-Small@2x.png",
-				"Icon-Small@3x.png",
-				"Icon-Small-40.png",
-				"Icon-Small-40@2x.png",
-				"Icon-Small-50.png",
-				"Icon-Small-50@2x.png",
-			},
-		},
-	},
-	
-	--
-	-- Android Section
-	--
-	android =
-	{
-		usesPermissions =
-		{
-			"android.permission.INTERNET",
-		},
-	},
+iphone =
+{
+plist =
+{
+CFBundleDisplayName = "Beasts Battle 2",
+CFBundleIconFile = "Icon.png",
+CFBundleIconFiles = {
+"Icon.png",
+"Icon-60.png",
+"Icon-72.png",
+"Icon-76.png",
+"Icon-120.png",
+"Icon@2x.png",
+"Icon-72@2x.png",
+"Icon-76@2x.png",
+"Icon@3x.png",
+"Icon-Small@3x.png"
+},
+UIAppFonts = {
+"FRAHV.TTF"
+}
+},
+},
+android =
+{
+usesPermissions =
+{
+"android.permission.INTERNET"
+},
+supportsScreens =
+{
+smallScreens = true,
+normalScreens = true,
+largeScreens = true,
+xlargeScreens = true,
+},
+},
+plugins =
+{
+["CoronaProvider.gameNetwork.apple"] = {publisherId = "com.coronalabs",supportedPlatforms = { iphone=true, ["iphone-sim"]=true }},
+["CoronaProvider.gameNetwork.google"] = {publisherId = "com.coronalabs",supportedPlatforms = { android=true }},
+}
 }
